--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "numeral": "^2.0.6",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
