--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
+    "vue-skycons": "^1.0.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
