--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vue-skycons": "^1.0.5",
+    "vue2-filters": "^0.8.0-beta.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
