--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.0.3",
     "vue-skycons": "^1.0.5",
     "vue2-filters": "^0.8.0-beta.1",
+    "vuetrend": "^0.3.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
