--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "epic-spinners": "^1.1.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "numeral": "^2.0.6",
@@ -17,6 +18,7 @@
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vue-skycons": "^1.0.5",
+    "vue-spinner": "^1.0.3",
     "vue2-filters": "^0.8.0-beta.1",
     "vuetrend": "^0.3.4",
     "vuex": "^3.0.1"
