--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "numeral": "^2.0.6",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vue-skycons": "^1.0.5",
     "vue-spinner": "^1.0.3",
+    "vue-toast-notification": "0.0.3",
     "vue2-filters": "^0.8.0-beta.1",
     "vuetrend": "^0.3.4",
     "vuex": "^3.0.1"
@@ -30,6 +32,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuejs-snackbar": "^4.0.1"
   }
 }
