--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "axios": "^0.19.2",
+    "core-js": "^2.6.11",
     "epic-spinners": "^1.1.0",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
+    "gsap": "^3.5.1",
+    "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "numeral": "^2.0.6",
-    "vee-validate": "^3.0.11",
-    "vue": "^2.6.10",
-    "vue-js-modal": "^1.3.31",
-    "vue-router": "^3.0.3",
+    "vee-validate": "^3.3.9",
+    "vue": "^2.6.12",
+    "vue-js-modal": "^1.3.35",
+    "vue-router": "^3.4.3",
     "vue-skycons": "^1.0.5",
-    "vue-spinner": "^1.0.3",
+    "vue-spinner": "^1.0.4",
     "vue-toast-notification": "0.0.3",
-    "vue2-filters": "^0.8.0-beta.1",
+    "vue2-filters": "^0.8.0",
     "vuetrend": "^0.3.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.12",
     "vuejs-snackbar": "^4.0.1"
   }
 }
